[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/sprites/player_ship.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/player_weapons/WeaponShotgun.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/player_weapons/WeaponRocket.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/player_weapons/WeaponStarter.tscn" type="PackedScene" id=5]

[node name="Player" type="Area2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( 2.07373, -64.7958, -53.0806, 71.6758, 74.9057, 69.5545 )

[node name="BulletSpawn" type="Position2D" parent="."]
position = Vector2( 1.41422, -32.1734 )

[node name="Weapons" type="Node" parent="."]

[node name="WeaponStarter" parent="Weapons" instance=ExtResource( 5 )]

[node name="WeaponShotgun" parent="Weapons" instance=ExtResource( 3 )]

[node name="WeaponRocket" parent="Weapons" instance=ExtResource( 4 )]
[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
